--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -2,16 +2,22 @@
 
 <form action="/owners" method="POST">
   <label>Name:</label>
+  <br>
+  <input type="text" name="owner[name]">
 
   <br>
-
-  <input type="text" name="owner[name]">
+  <p>Select an existing pet or create a new one below.</p>
 
   <h3>Existing Pets</h3>
   <% @pets.each do |pet| %>
     <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %><br>
   <% end %>
   <br>
+
+   <h3>New Pet</h3>
+    <label>Pet name:</label>
+      <input  type="text" name="pet[name]"></input>
+    <br>
 
   <input type="submit" value="Create Owner">
 </form>
