--- a/app/views/owners/show.erb
+++ b/app/views/owners/show.erb
@@ -1,5 +1,5 @@
-<h1><%=@owner.name%></h1>
-<h4>Pets:</h4>
+<h1>Hi <%=@owner.name%>,</h1>
+<h4>These are your Pets:</h4>
 <ul>
   <%@owner.pets.each do |pet|%>
   <li><%=pet.name%></li>
